// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly active task 1`] = `
<ForwardRef
  className="task-command-bar"
  renderAs="nav"
>
  <ForwardRef
    className="is-grouped btn-activation"
    color={null}
    disabled={false}
    fullwidth={false}
    inverted={false}
    isSelected={false}
    isStatic={false}
    loading={false}
    onClick={[Function]}
    outlined={false}
    remove={false}
    renderAs="button"
    reset={false}
    rounded={false}
    size={null}
    state={null}
    style={Object {}}
    submit={false}
    text={false}
  >
    <ForwardRef
      align={null}
      className="is-small"
      color={null}
      icon={null}
      size={null}
      style={Object {}}
    >
      <FontAwesomeIcon
        border={false}
        className="task-icon"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f04d",
              "M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z",
            ],
            "iconName": "stop",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    className="is-grouped btn-toggle-next"
    color={null}
    disabled={false}
    fullwidth={false}
    inverted={false}
    isSelected={false}
    isStatic={false}
    loading={false}
    onClick={[Function]}
    outlined={false}
    remove={false}
    renderAs="button"
    reset={false}
    rounded={false}
    size={null}
    state={null}
    style={Object {}}
    submit={false}
    text={false}
  >
    <ForwardRef
      align={null}
      className="is-small"
      color={null}
      icon={null}
      size={null}
      style={Object {}}
    >
      <FontAwesomeIcon
        border={false}
        className="task-icon"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f048",
              "M64 468V44c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12v176.4l195.5-181C352.1 22.3 384 36.6 384 64v384c0 27.4-31.9 41.7-52.5 24.6L136 292.7V468c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12z",
            ],
            "iconName": "step-backward",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders correctly inactive task 1`] = `
<ForwardRef
  className="task-command-bar"
  renderAs="nav"
>
  <ForwardRef
    className="is-grouped btn-activation"
    color={null}
    disabled={false}
    fullwidth={false}
    inverted={false}
    isSelected={false}
    isStatic={false}
    loading={false}
    onClick={[Function]}
    outlined={false}
    remove={false}
    renderAs="button"
    reset={false}
    rounded={false}
    size={null}
    state={null}
    style={Object {}}
    submit={false}
    text={false}
  >
    <ForwardRef
      align={null}
      className="is-small"
      color={null}
      icon={null}
      size={null}
      style={Object {}}
    >
      <FontAwesomeIcon
        border={false}
        className="task-icon"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f04b",
              "M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z",
            ],
            "iconName": "play",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    className="is-grouped btn-toggle-next"
    color={null}
    disabled={false}
    fullwidth={false}
    inverted={false}
    isSelected={false}
    isStatic={false}
    loading={false}
    onClick={[Function]}
    outlined={false}
    remove={false}
    renderAs="button"
    reset={false}
    rounded={false}
    size={null}
    state={null}
    style={Object {}}
    submit={false}
    text={false}
  >
    <ForwardRef
      align={null}
      className="is-small"
      color={null}
      icon={null}
      size={null}
      style={Object {}}
    >
      <FontAwesomeIcon
        border={false}
        className="task-icon"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f048",
              "M64 468V44c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12v176.4l195.5-181C352.1 22.3 384 36.6 384 64v384c0 27.4-31.9 41.7-52.5 24.6L136 292.7V468c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12z",
            ],
            "iconName": "step-backward",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;
